--- a/template/template.hbs
+++ b/template/template.hbs
@@ -1,21 +1,21 @@
 <div class="timer" id="timer-1">
   <div class="field">
-    <span class="value" data-value="days">{{days}}</span>
+    <span class="value" data-value="days">{{this.days}}</span>
     <span class="label">Days</span>
   </div>
 
   <div class="field">
-    <span class="value" data-value="hours">{{hours}}</span>
+    <span class="value" data-value="hours">{{this.hours}}</span>
     <span class="label">Hours</span>
   </div>
 
   <div class="field">
-    <span class="value" data-value="mins">{{mins}}</span>
+    <span class="value" data-value="mins">{{this.mins}}</span>
     <span class="label">Minutes</span>
   </div>
 
   <div class="field">
-    <span class="value" data-value="secs">{{secs}}</span>
+    <span class="value" data-value="secs">{{this.secs}}</span>
     <span class="label">Seconds</span>
   </div>
 </div>
